// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResearchEditorOverview > handles empty updates 1`] = `
<div>
  <div
    class="css-172foz9"
  >
    <h2
      class="css-rzafpc"
    >
      Research overview
    </h2>
    <button
      class="css-1so9gft"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-pqrd5o"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > handles falsey updates 1`] = `
<div>
  <div
    class="css-172foz9"
  >
    <h2
      class="css-rzafpc"
    >
      Research overview
    </h2>
    <button
      class="css-1so9gft"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-pqrd5o"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > renders correctly 1`] = `
<div>
  <div
    class="css-172foz9"
  >
    <h2
      class="css-rzafpc"
    >
      Research overview
    </h2>
    <ul
      class="css-1pfv7lm"
    >
      <li
        class="css-1uda5hs"
      >
        <span
          class="css-1yz7e9k"
        >
          <strong>
            Update 1
          </strong>
        </span>
      </li>
      <li
        class="css-1uda5hs"
      >
        <span
          class="css-1yz7e9k"
        >
          Update 2
          <a
            class="css-1rer3n2"
            data-discover="true"
            href="/research/abc/edit-update/2"
          >
            Edit
          </a>
        </span>
      </li>
      <li
        class="css-1uda5hs"
      >
        <span
          class="css-1yz7e9k"
        >
          Update 3
          <a
            class="css-1rer3n2"
            data-discover="true"
            href="/research/abc/edit-update/3"
          >
            Edit
          </a>
        </span>
      </li>
    </ul>
    <button
      class="css-1so9gft"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-pqrd5o"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-nfny5s"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;
